src/lib/parser/generated/BoQQIParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { BoQQIParserListener } from "./BoQQIParserListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class BoQQIParser extends antlr.Parser {
    public static readonly IF = 1;
    public static readonly ELSE = 2;
    public static readonly WHILE = 3;
    public static readonly TRUE = 4;
    public static readonly FALSE = 5;
    public static readonly MAX = 6;
    public static readonly MIN = 7;
    public static readonly FUNC = 8;
    public static readonly RETURN = 9;
    public static readonly TYPE_INT = 10;
    public static readonly TYPE_FLOAT = 11;
    public static readonly TYPE_STRING = 12;
    public static readonly TYPE_BOOL = 13;
    public static readonly TYPE_VOID = 14;
    public static readonly PLUS = 15;
    public static readonly MINUS = 16;
    public static readonly MUL = 17;
    public static readonly DIV = 18;
    public static readonly MOD = 19;
    public static readonly EQUAL = 20;
    public static readonly EQ = 21;
    public static readonly NE = 22;
    public static readonly GE = 23;
    public static readonly LE = 24;
    public static readonly GT = 25;
    public static readonly LT = 26;
    public static readonly LPAREN = 27;
    public static readonly RPAREN = 28;
    public static readonly LBRACE = 29;
    public static readonly RBRACE = 30;
    public static readonly LBRACK = 31;
    public static readonly RBRACK = 32;
    public static readonly COMMA = 33;
    public static readonly COLON = 34;
    public static readonly SEMI = 35;
    public static readonly FLOAT = 36;
    public static readonly INT = 37;
    public static readonly STRING = 38;
    public static readonly IDENT = 39;
    public static readonly WS = 40;
    public static readonly LINE_COMMENT = 41;
    public static readonly RULE_program = 0;
    public static readonly RULE_statement = 1;
    public static readonly RULE_if = 2;
    public static readonly RULE_while = 3;
    public static readonly RULE_function = 4;
    public static readonly RULE_returnType = 5;
    public static readonly RULE_params = 6;
    public static readonly RULE_param = 7;
    public static readonly RULE_return = 8;
    public static readonly RULE_call = 9;
    public static readonly RULE_args = 10;
    public static readonly RULE_declaration = 11;
    public static readonly RULE_domain = 12;
    public static readonly RULE_assign = 13;
    public static readonly RULE_type = 14;
    public static readonly RULE_arrayType = 15;
    public static readonly RULE_elementType = 16;
    public static readonly RULE_numericType = 17;
    public static readonly RULE_nonNumericType = 18;
    public static readonly RULE_expr = 19;
    public static readonly RULE_boolean = 20;

    public static readonly literalNames = [
        null, "'if'", "'else'", "'while'", "'true'", "'false'", "'max'", 
        "'min'", "'function'", "'return'", "'int'", "'float'", "'string'", 
        "'bool'", "'void'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'=='", 
        "'!='", "'>='", "'<='", "'>'", "'<'", "'('", "')'", "'{'", "'}'", 
        "'['", "']'", "','", "':'", "';'"
    ];

    public static readonly symbolicNames = [
        null, "IF", "ELSE", "WHILE", "TRUE", "FALSE", "MAX", "MIN", "FUNC", 
        "RETURN", "TYPE_INT", "TYPE_FLOAT", "TYPE_STRING", "TYPE_BOOL", 
        "TYPE_VOID", "PLUS", "MINUS", "MUL", "DIV", "MOD", "EQUAL", "EQ", 
        "NE", "GE", "LE", "GT", "LT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
        "LBRACK", "RBRACK", "COMMA", "COLON", "SEMI", "FLOAT", "INT", "STRING", 
        "IDENT", "WS", "LINE_COMMENT"
    ];
    public static readonly ruleNames = [
        "program", "statement", "if", "while", "function", "returnType", 
        "params", "param", "return", "call", "args", "declaration", "domain", 
        "assign", "type", "arrayType", "elementType", "numericType", "nonNumericType", 
        "expr", "boolean",
    ];

    public get grammarFileName(): string { return "BoQQIParser.g4"; }
    public get literalNames(): (string | null)[] { return BoQQIParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return BoQQIParser.symbolicNames; }
    public get ruleNames(): string[] { return BoQQIParser.ruleNames; }
    public get serializedATN(): number[] { return BoQQIParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, BoQQIParser._ATN, BoQQIParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, BoQQIParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 49;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 16138) !== 0) || _la === 39) {
                {
                this.state = 47;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case BoQQIParser.IF:
                case BoQQIParser.WHILE:
                case BoQQIParser.RETURN:
                case BoQQIParser.IDENT:
                    {
                    this.state = 42;
                    this.statement();
                    }
                    break;
                case BoQQIParser.FUNC:
                    {
                    this.state = 43;
                    this.function_();
                    }
                    break;
                case BoQQIParser.TYPE_INT:
                case BoQQIParser.TYPE_FLOAT:
                case BoQQIParser.TYPE_STRING:
                case BoQQIParser.TYPE_BOOL:
                    {
                    this.state = 44;
                    this.declaration();
                    this.state = 45;
                    this.match(BoQQIParser.SEMI);
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                this.state = 51;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 52;
            this.match(BoQQIParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 2, BoQQIParser.RULE_statement);
        try {
            this.state = 63;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 2, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 54;
                this.if_();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 55;
                this.while_();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 56;
                this.call();
                this.state = 57;
                this.match(BoQQIParser.SEMI);
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 59;
                this.assign();
                this.state = 60;
                this.match(BoQQIParser.SEMI);
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 62;
                this.return_();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public if_(): IfContext {
        let localContext = new IfContext(this.context, this.state);
        this.enterRule(localContext, 4, BoQQIParser.RULE_if);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 65;
            this.match(BoQQIParser.IF);
            this.state = 66;
            this.match(BoQQIParser.LPAREN);
            this.state = 67;
            this.expr(0);
            this.state = 68;
            this.match(BoQQIParser.RPAREN);
            this.state = 69;
            this.match(BoQQIParser.LBRACE);
            this.state = 73;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 522) !== 0) || _la === 39) {
                {
                {
                this.state = 70;
                this.statement();
                }
                }
                this.state = 75;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 76;
            this.match(BoQQIParser.RBRACE);
            this.state = 86;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 2) {
                {
                this.state = 77;
                this.match(BoQQIParser.ELSE);
                this.state = 78;
                this.match(BoQQIParser.LBRACE);
                this.state = 82;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 522) !== 0) || _la === 39) {
                    {
                    {
                    this.state = 79;
                    this.statement();
                    }
                    }
                    this.state = 84;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 85;
                this.match(BoQQIParser.RBRACE);
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public while_(): WhileContext {
        let localContext = new WhileContext(this.context, this.state);
        this.enterRule(localContext, 6, BoQQIParser.RULE_while);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 88;
            this.match(BoQQIParser.WHILE);
            this.state = 89;
            this.match(BoQQIParser.LPAREN);
            this.state = 90;
            this.expr(0);
            this.state = 91;
            this.match(BoQQIParser.RPAREN);
            this.state = 92;
            this.match(BoQQIParser.LBRACE);
            this.state = 96;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 522) !== 0) || _la === 39) {
                {
                {
                this.state = 93;
                this.statement();
                }
                }
                this.state = 98;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 99;
            this.match(BoQQIParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public function_(): FunctionContext {
        let localContext = new FunctionContext(this.context, this.state);
        this.enterRule(localContext, 8, BoQQIParser.RULE_function);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 101;
            this.match(BoQQIParser.FUNC);
            this.state = 102;
            this.match(BoQQIParser.IDENT);
            this.state = 103;
            this.match(BoQQIParser.LPAREN);
            this.state = 104;
            this.params();
            this.state = 105;
            this.match(BoQQIParser.RPAREN);
            this.state = 106;
            this.match(BoQQIParser.COLON);
            this.state = 107;
            this.returnType();
            this.state = 108;
            this.match(BoQQIParser.LBRACE);
            this.state = 115;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 15882) !== 0) || _la === 39) {
                {
                this.state = 113;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case BoQQIParser.IF:
                case BoQQIParser.WHILE:
                case BoQQIParser.RETURN:
                case BoQQIParser.IDENT:
                    {
                    this.state = 109;
                    this.statement();
                    }
                    break;
                case BoQQIParser.TYPE_INT:
                case BoQQIParser.TYPE_FLOAT:
                case BoQQIParser.TYPE_STRING:
                case BoQQIParser.TYPE_BOOL:
                    {
                    this.state = 110;
                    this.declaration();
                    this.state = 111;
                    this.match(BoQQIParser.SEMI);
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                this.state = 117;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 118;
            this.match(BoQQIParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public returnType(): ReturnTypeContext {
        let localContext = new ReturnTypeContext(this.context, this.state);
        this.enterRule(localContext, 10, BoQQIParser.RULE_returnType);
        try {
            this.state = 125;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case BoQQIParser.TYPE_INT:
            case BoQQIParser.TYPE_FLOAT:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 120;
                this.numericType();
                this.state = 121;
                this.domain();
                }
                break;
            case BoQQIParser.TYPE_STRING:
            case BoQQIParser.TYPE_BOOL:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 123;
                this.nonNumericType();
                }
                break;
            case BoQQIParser.TYPE_VOID:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 124;
                this.match(BoQQIParser.TYPE_VOID);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public params(): ParamsContext {
        let localContext = new ParamsContext(this.context, this.state);
        this.enterRule(localContext, 12, BoQQIParser.RULE_params);
        let _la: number;
        try {
            this.state = 136;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case BoQQIParser.TYPE_INT:
            case BoQQIParser.TYPE_FLOAT:
            case BoQQIParser.TYPE_STRING:
            case BoQQIParser.TYPE_BOOL:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 127;
                this.param();
                this.state = 132;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 33) {
                    {
                    {
                    this.state = 128;
                    this.match(BoQQIParser.COMMA);
                    this.state = 129;
                    this.param();
                    }
                    }
                    this.state = 134;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                }
                break;
            case BoQQIParser.RPAREN:
                this.enterOuterAlt(localContext, 2);
                // tslint:disable-next-line:no-empty
                {
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public param(): ParamContext {
        let localContext = new ParamContext(this.context, this.state);
        this.enterRule(localContext, 14, BoQQIParser.RULE_param);
        try {
            this.state = 145;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case BoQQIParser.TYPE_INT:
            case BoQQIParser.TYPE_FLOAT:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 138;
                this.numericType();
                this.state = 139;
                this.domain();
                this.state = 140;
                this.match(BoQQIParser.IDENT);
                }
                break;
            case BoQQIParser.TYPE_STRING:
            case BoQQIParser.TYPE_BOOL:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 142;
                this.nonNumericType();
                this.state = 143;
                this.match(BoQQIParser.IDENT);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public return_(): ReturnContext {
        let localContext = new ReturnContext(this.context, this.state);
        this.enterRule(localContext, 16, BoQQIParser.RULE_return);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 147;
            this.match(BoQQIParser.RETURN);
            this.state = 149;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 134217776) !== 0) || ((((_la - 36)) & ~0x1F) === 0 && ((1 << (_la - 36)) & 15) !== 0)) {
                {
                this.state = 148;
                this.expr(0);
                }
            }

            this.state = 151;
            this.match(BoQQIParser.SEMI);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public call(): CallContext {
        let localContext = new CallContext(this.context, this.state);
        this.enterRule(localContext, 18, BoQQIParser.RULE_call);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 153;
            this.match(BoQQIParser.IDENT);
            this.state = 154;
            this.match(BoQQIParser.LPAREN);
            this.state = 155;
            this.args();
            this.state = 156;
            this.match(BoQQIParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public args(): ArgsContext {
        let localContext = new ArgsContext(this.context, this.state);
        this.enterRule(localContext, 20, BoQQIParser.RULE_args);
        let _la: number;
        try {
            this.state = 167;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case BoQQIParser.TRUE:
            case BoQQIParser.FALSE:
            case BoQQIParser.LPAREN:
            case BoQQIParser.FLOAT:
            case BoQQIParser.INT:
            case BoQQIParser.STRING:
            case BoQQIParser.IDENT:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 158;
                this.expr(0);
                this.state = 163;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 33) {
                    {
                    {
                    this.state = 159;
                    this.match(BoQQIParser.COMMA);
                    this.state = 160;
                    this.expr(0);
                    }
                    }
                    this.state = 165;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                }
                break;
            case BoQQIParser.RPAREN:
                this.enterOuterAlt(localContext, 2);
                // tslint:disable-next-line:no-empty
                {
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public declaration(): DeclarationContext {
        let localContext = new DeclarationContext(this.context, this.state);
        this.enterRule(localContext, 22, BoQQIParser.RULE_declaration);
        let _la: number;
        try {
            this.state = 193;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 17, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 169;
                this.numericType();
                this.state = 170;
                this.domain();
                this.state = 171;
                this.match(BoQQIParser.IDENT);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 173;
                this.numericType();
                this.state = 174;
                this.domain();
                this.state = 175;
                this.match(BoQQIParser.IDENT);
                this.state = 176;
                this.match(BoQQIParser.EQUAL);
                this.state = 177;
                this.expr(0);
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 179;
                this.nonNumericType();
                this.state = 180;
                this.match(BoQQIParser.IDENT);
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 182;
                this.nonNumericType();
                this.state = 183;
                this.match(BoQQIParser.IDENT);
                this.state = 184;
                this.match(BoQQIParser.EQUAL);
                this.state = 185;
                this.expr(0);
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 187;
                this.arrayType();
                this.state = 189;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 29) {
                    {
                    this.state = 188;
                    this.domain();
                    }
                }

                this.state = 191;
                this.match(BoQQIParser.IDENT);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public domain(): DomainContext {
        let localContext = new DomainContext(this.context, this.state);
        this.enterRule(localContext, 24, BoQQIParser.RULE_domain);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 195;
            this.match(BoQQIParser.LBRACE);
            this.state = 196;
            this.match(BoQQIParser.MAX);
            this.state = 197;
            this.match(BoQQIParser.COLON);
            this.state = 198;
            this.expr(0);
            this.state = 199;
            this.match(BoQQIParser.COMMA);
            this.state = 200;
            this.match(BoQQIParser.MIN);
            this.state = 201;
            this.match(BoQQIParser.COLON);
            this.state = 202;
            this.expr(0);
            this.state = 203;
            this.match(BoQQIParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public assign(): AssignContext {
        let localContext = new AssignContext(this.context, this.state);
        this.enterRule(localContext, 26, BoQQIParser.RULE_assign);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 205;
            this.match(BoQQIParser.IDENT);
            this.state = 210;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 31) {
                {
                this.state = 206;
                this.match(BoQQIParser.LBRACK);
                this.state = 207;
                this.expr(0);
                this.state = 208;
                this.match(BoQQIParser.RBRACK);
                }
            }

            this.state = 212;
            this.match(BoQQIParser.EQUAL);
            this.state = 213;
            this.expr(0);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public type_(): TypeContext {
        let localContext = new TypeContext(this.context, this.state);
        this.enterRule(localContext, 28, BoQQIParser.RULE_type);
        try {
            this.state = 218;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 19, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 215;
                this.numericType();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 216;
                this.nonNumericType();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 217;
                this.arrayType();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public arrayType(): ArrayTypeContext {
        let localContext = new ArrayTypeContext(this.context, this.state);
        this.enterRule(localContext, 30, BoQQIParser.RULE_arrayType);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 220;
            this.elementType();
            this.state = 221;
            this.match(BoQQIParser.LBRACK);
            this.state = 222;
            this.match(BoQQIParser.INT);
            this.state = 223;
            this.match(BoQQIParser.RBRACK);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public elementType(): ElementTypeContext {
        let localContext = new ElementTypeContext(this.context, this.state);
        this.enterRule(localContext, 32, BoQQIParser.RULE_elementType);
        try {
            this.state = 227;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case BoQQIParser.TYPE_INT:
            case BoQQIParser.TYPE_FLOAT:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 225;
                this.numericType();
                }
                break;
            case BoQQIParser.TYPE_STRING:
            case BoQQIParser.TYPE_BOOL:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 226;
                this.nonNumericType();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public numericType(): NumericTypeContext {
        let localContext = new NumericTypeContext(this.context, this.state);
        this.enterRule(localContext, 34, BoQQIParser.RULE_numericType);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 229;
            _la = this.tokenStream.LA(1);
            if(!(_la === 10 || _la === 11)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public nonNumericType(): NonNumericTypeContext {
        let localContext = new NonNumericTypeContext(this.context, this.state);
        this.enterRule(localContext, 36, BoQQIParser.RULE_nonNumericType);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 231;
            _la = this.tokenStream.LA(1);
            if(!(_la === 12 || _la === 13)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public expr(): ExprContext;
    public expr(_p: number): ExprContext;
    public expr(_p?: number): ExprContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new ExprContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 38;
        this.enterRecursionRule(localContext, 38, BoQQIParser.RULE_expr, _p);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 244;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 21, this.context) ) {
            case 1:
                {
                localContext = new ParensContext(localContext);
                this.context = localContext;
                previousContext = localContext;
